runtime/pavex_macros/tests/config/fail/group_rexport.stderr
error: Grouped re-exports can't be annotated with #[pavex::config].
       Re-export your configuration types one by one, annotating each `use` with #[pavex::config].
 --> tests/config/fail/group_rexport.rs:5:1
  |
5 | pub use private::{A, B};
  | ^^^^^^^^^^^^^^^^^^^^^^^^

error: Star re-exports can't be annotated with #[pavex::config].
       Re-export your configuration types one by one, annotating each `use` with #[pavex::config].
 --> tests/config/fail/group_rexport.rs:8:1
  |
8 | pub use private::*;
  | ^^^^^^^^^^^^^^^^^^^
